--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name":"fuck-xuexiqiangguo","private":true,"main":"main.js","version":"0.7.0"}
+{"name":"fuck-xuexiqiangguo","private":true,"electron":"5.0.2","main":"main.js","version":"1.0.0-alpha.1"}
